# sgx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: test_multi_agent.py
skills/sgx-for-agents/: README.md  SKILL.md
src/sgx/: __init__.py  auth.py  auth_login.py  cli.py  client.py  search_preparser.py  threads.py
tests/: test_auth.py  test_auth_login.py  test_cli.py  test_client.py  test_search_preparser.py  test_threads.py
