[project]
name = "sgx"
version = "0.2.0"
description = "SuperGrok X — CLI for xAI's privileged server-side tools (X search, multi-agent research, persistent threads) with native OAuth login, Grok CLI import, beautiful HTML output, and agent-friendly --json interface."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mikey O'Brien", email = "mikey@obrien.dev" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
keywords = [
    "xai",
    "grok",
    "cli",
    "x-search",
    "multi-agent",
    "oauth",
    "super-grok",
    "responses-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
sgx = "sgx.cli:app"

[project.urls]
Homepage = "https://github.com/mikeyobrien/sgx"
Repository = "https://github.com/mikeyobrien/sgx"
Issues = "https://github.com/mikeyobrien/sgx/issues"
Changelog = "https://github.com/mikeyobrien/sgx/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sgx"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100

[tool.mypy]
# strict = true  # Too strict currently — re-enable after adding more type annotations
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
